step 09 added TodoListDirective implemented as a class

--- a/src/todoList-ts/todoListDirective.html
+++ b/src/todoList-ts/todoListDirective.html
@@ -4,3 +4,7 @@
 <br /><br /><br /><br />
 <h1>TypeScript Todo List: Directive - Isolated Scope (declared as function)</h1>
 <todo-list-directive-iso-scope test="'test data on the $scope'"></todo-list-directive-iso-scope>
+<hr />
+<br /><br /><br /><br />
+<h1>TypeScript Todo List: Directive (declared as class)</h1>
+<todo-list-directive-as-class></todo-list-directive-as-class>
